--- a/tests/options/singleQuote/single-false/formatted.pug
+++ b/tests/options/singleQuote/single-false/formatted.pug
@@ -4,17 +4,45 @@
 - const maybeThisName = `name ${"last" + name}`;
 - const orThisName = `${"first" + anotherName} name`;
 
-- const nameArray = [];
+//- Case statement
+case "red"
+  when "red"
+    p It is red
+  default
+    p It is not red
 
-div(:class="{ 'pt-2': !dense }", test="blah")
-  each name in nameArray.length > 0 ? nameArray : ["The 'Rock'"]
-    p= `${name}`
-    p= "single quoted"
+//- Conditionals
+if "red" === "'red'"
+  p Red is red
+else if "blue" === '"blue"'
+  p Blue is blue
 
-each quote of ["quote1", 'quote2']
-  p= quote
+unless "blue" !== '"blue"'
+  p Blue is blue
 
-div(data-tab=name ? name : "The 'Rock'")
+//- Iteration
+each val in ["One", "Two"]
+  p= val
 
-if name === "test"
-  p= name
+while "red" === "'blue'"
+  - break
+
+//- Mixin def
+mixin element(el = "button")
+  p= el
+
+//- Mixin call
++element("button")
+
+//- &attributes
+div&attributes({ x: "x", y: "y" })
+
+.grey--text {{ $t("my-language-key.title") }}
+  v-text-field(
+    :label="$t('my-language-key')",
+    type="text",
+    name="aName",
+    v-model="model",
+    :rules="[(model.values !== null && model.values.length <= 15) || $t('my-other-language-key.error')]",
+    :disabled="invalid"
+  )
