--- a/tests/pug-tests/case.formatted.pug
+++ b/tests/pug-tests/case.formatted.pug
@@ -15,5 +15,5 @@ html
 
     - var friend = "Tim:G";
     case friend
-      when 'Tim:G': p Friend is a string
-      when {tim: 'g'}: p Friend is an object
+      when "Tim:G": p Friend is a string
+      when { tim: "g" }: p Friend is an object
