--- a/tests/pug-tests/comments-in-case.formatted.pug
+++ b/tests/pug-tests/comments-in-case.formatted.pug
@@ -4,7 +4,7 @@ html
     - var s = "this";
     case s
       //- Comment
-      when 'this'
+      when "this"
         p It's this!
-      when 'that'
+      when "that"
         p It's that!
