--- a/tests/frameworks/svelte/formatted.pug
+++ b/tests/frameworks/svelte/formatted.pug
@@ -7,11 +7,11 @@ main
       | to learn how to build Svelte
       | apps.
   p
-    +each('cats as cat')
+    +each("cats as cat")
       a(href="{ cat.id }") { cat.name }
       | !{ ' ' }
 
   p
-    +if('!user.loggedIn')
+    +if("!user.loggedIn")
       button(on:click="{ toggle }")
         | Log out
