--- a/tests/pug-tests/interpolated-mixin.formatted.pug
+++ b/tests/pug-tests/interpolated-mixin.formatted.pug
@@ -1,4 +1,4 @@
 mixin linkit(url)
   a(href=url)= url
 
-p This also works #[+linkit('http://www.bing.com')] so hurrah for Pug
+p This also works #[+linkit("http://www.bing.com")] so hurrah for Pug
