--- a/tests/pug-tests/mixin.block-tag-behaviour.formatted.pug
+++ b/tests/pug-tests/mixin.block-tag-behaviour.formatted.pug
@@ -5,7 +5,7 @@ mixin article(name)
 
 html
   body
-    +article('Foo'): p I'm article foo
+    +article("Foo"): p I'm article foo
 
 mixin article(name)
   section.article
@@ -15,7 +15,7 @@ mixin article(name)
 
 html
   body
-    +article('Something').
+    +article("Something").
       I'm a much longer
       text-only article,
       but you can still
