Fix #531: Stop unnecessary quote escaping on vue v-bind strings

--- a/tests/frameworks/vue/v-bind/unformatted.pug
+++ b/tests/frameworks/vue/v-bind/unformatted.pug
@@ -2,3 +2,8 @@ a(v-bind="{  ...$attrs  }") ...
 a(v-bind:href="  url ") ...
 a(:href="  url ") ...
 a(:[key]="  url ") ...
+
+div(:value=attributes['data-value'])
+div(:value=attributes['"data-value"'])
+div(:value=attributes['"\'data-value\'"'])
+div(:value='"\'data-value\'"')
