Enhance quoting conversion on various pug statements (#578)

--- a/tests/options/singleQuote/single-true-pug-false/unformatted.pug
+++ b/tests/options/singleQuote/single-true-pug-false/unformatted.pug
@@ -18,3 +18,46 @@ div(data-tab=name ? name : "The 'Rock'")
 
 if name === "test"
   p= name
+
+//- Case statement
+case 'red'
+  when 'red'
+    p It is red
+  default
+    p It is not red
+
+//- Conditionals
+if 'red' === '\'red\''
+  p Red is red
+else if 'blue' === '"blue"'
+  p Blue is blue
+
+unless 'blue' !== "\"blue\""
+  p Blue is blue
+
+//- Iteration
+each val in ['One', "Two"]
+  p= val
+
+while 'red' === "'blue'"
+  - break
+
+//- Mixin def
+mixin element(el='button')
+  p= el
+
+//- Mixin call
++element('button')
+
+//- &attributes
+div&attributes({ x: 'x', y: 'y' })
+
+.grey--text {{ $t('my-language-key.title') }}
+  v-text-field(
+    :label='$t("my-language-key")',
+    type='text',
+    name='aName',
+    v-model="model",
+    :rules='[ (model.values !== null && model.values.length <= 15) || $t("my-other-language-key.error")]',
+    :disabled="invalid"
+  )
