--- a/tests/options/singleQuote/single-false-pug-false/formatted.pug
+++ b/tests/options/singleQuote/single-false-pug-false/formatted.pug
@@ -11,7 +11,7 @@ div(:class="{ 'pt-2': !dense }", test="blah")
     p= `${name}`
     p= "single quoted"
 
-each quote of ["quote1", 'quote2']
+each quote of ["quote1", "quote2"]
   p= quote
 
 div(data-tab=name ? name : "The 'Rock'")
