--- a/tests/options/singleQuote/single-true-pug-true/formatted.pug
+++ b/tests/options/singleQuote/single-true-pug-true/formatted.pug
@@ -11,10 +11,10 @@ div(:class='{ "pt-2": !dense }', test='blah')
     p= `${name}`
     p= 'single quoted'
 
-each quote of ["quote1", 'quote2']
+each quote of ['quote1', 'quote2']
   p= quote
 
 div(data-tab=name ? name : "The 'Rock'")
 
-if name === "test"
+if name === 'test'
   p= name
