--- a/tests/unbuffered-code/unformatted.pug
+++ b/tests/unbuffered-code/unformatted.pug
@@ -12,6 +12,8 @@
   p #{ obj.color2 } is the second color, if it exists
 -    else
   p Else without a comment
+- for (const k of        obj?.items         || [])    // Comment
+  p #{ k }
 - for (const k of        obj?.items         || [])
   p #{ k }
 - let n = 2;
